[build-system]
requires = ["uv-build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "testflinger-agent"
description = "Testflinger agent"
readme = "README.md"
version = "1.1.0"
authors = []
requires-python = ">=3.8"
dependencies = [
    "influxdb>=5.3.2",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "testflinger-common",
    "voluptuous>=0.14.2",
]

[project.scripts]
testflinger-agent = "testflinger_agent.cmd:main"

[dependency-groups]
charm = [
    "charmcraft>=2.7.3",
    "gitpython==3.1.44",
    "jinja2==3.1.6",
    "juju>=3.5.2.1",
    "ops>=1.4.0",
    "pytest>=8.3.5",
    "pytest-operator>=0.42.0",
]
dev = [
    "pylint>=3.2.7",
    "pytest>=8.1.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "requests-mock>=1.12.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # comprenhension
    "D", # docstrings
    "DTZ", # flake8-datetimez 
    "E", # pycodestyle errors
    "F", # pyflakes
    #"G", # flake8-logging-format TODO
    "I", # isort
    "LOG", # flake8-logging
    "N", # naming
    "PLE", # pylint errors
    "PLW0", # pyling warnings
    "S", # flake8-bandit 
    "W", # pycodestyle warnings
]
ignore = [
    "D100", # docstring: Missing docstring in public module
    "D101", # docstring: Missing docstring in public class
    "D102", # docstring: Missing docstring in public method
    "D103", # docstring: Missing docstring in public function
    "D104", # docstring: Missing docstring in public package
    "D105", # docstring: Missing docstring in magic method
    "D107", # docstring: Missing docstring in __init__
    "D203", # docstring: 1 black line required before class docstring
    "D204", # docstring: 1 black line required after class docstring
    "D205", # docstring: 1 black line required between summary line and description
    "D212", # docstring: Multi-line docstring summary should start at the first line
    "D213", # docstring: Multi-line docstring summary should start at the second line
    "D215", # docstring: Section underline is over-indented
    "D400", # docstring: First line should end with a period
    "D406", # docstring: Section name should end with a newline
    "D407", # docstring: Missing dashed underline after section
    "D408", # docstring: Section underline should be in the line following the section's name
    "D409", # docstring: Section underline should match the lenght of its name
    "D413", # docstring: Missing blank line after last section. 
    "D415", # docstring: First line should end with a period, question mark, or exclamation point
    "N803", # Naming: Argument '{name}' should be lowercase
    "N806", # Naming: Variable '{name}' in function should be lowercase
    "S108", # bandit: hardcoded-temp-file
]

[tool.ruff.lint.per-file-ignores]
"src/testflinger_agent/agent.py" = [
    "S202" # bandit: tarfile-unsafe-members
]
"src/testflinger_agent/runner.py" = [
    "S602" # bandit: subprocess-popen-with-shell-equals-true; Removing shell causes S603
]
[tool.ruff.lint.flake8-builtins]
ignorelist = [
    "ConnectionError", # import from requests.exceptions
    "filter", # Needed for tarfile.extractall()
    "open" # Needed for tarfile.open()
]

[tool.uv.sources]
testflinger-common = { path = "../common" }
