[build-system]
requires = ["setuptools>=78.1.0", "setuptools-scm>=8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testflinger-cli"
description = "Testflinger CLI"
readme = "README.md"
license-files = ["COPYING"]
dependencies = [
  "argcomplete>=3.6.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "xdg-base-dirs>=6.0.2",
]
dynamic = ["version"]
requires-python = ">= 3.10"

[project.scripts]
testflinger-cli = "testflinger_cli:cli"
testflinger = "testflinger_cli:cli"

[dependency-groups]
dev = [
  "pylint>=3.3.6",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "requests-mock>=1.12.1",
  "ruff>=0.11.6",
]

[tool.pylint.basic]
good-names = ["k", "v"]

[tool.pylint."messages control"]
disable = ["C0209", "too-many-lines"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "C", # comprenhension
    "D", # docstrings
    "E", # pycodestyle errors
    "F", # pyflakes
    "N", # naming
    "W", # pycodestyle warnings
    "I001" # Import order: Imported names are in the wrong order.
]
ignore = [
    "C901", # mccabe: Function is too complex 
    "D100", # docstring: Missing docstring in public module
    "D101", # docstring: Missing docstring in public class
    "D102", # docstring: Missing docstring in public method
    "D103", # docstring: Missing docstring in public function
    "D104", # docstring: Missing docstring in public package
    "D105", # docstring: Missing docstring in magic method
    "D107", # docstring: Missing docstring in __init__
    "D200", # docstring: One-line docstring should fit on one line with quotes
    "D202", # docstring: No black lines allowed after function docstring
    "D203", # docstring: 1 black line required before class docstring
    "D204", # docstring: 1 black line required after class docstring
    "D205", # docstring: 1 black line required between summary line and description
    "D212", # docstring: Multi-line docstring summary should start at the first line
    "D213", # docstring: Multi-line docstring summary should start at the second line
    "D215", # docstring: Section underline is over-indented
    "D400", # docstring: First line should end with a period
    "D401", # docstring: First line should be in imperative mood; try rephrasing
    "D403", # docstring: First word of the first line should be properly capitalized
    "D404", # docstring: First word of the docstring should not be 'This'
    "D406", # docstring: Section name should end with a newline
    "D407", # docstring: Missing dashed underline after section
    "D408", # docstring: Section underline should be in the line following the section's name
    "D409", # docstring: Section underline should match the lenght of its name
    "D413", # docstring: Missing blank line after last section. 
    "D415", # docstring: First line should end with a period, question mark, or exclamation point
    "N803", # Naming: Argument '{name}' should be lowercase
    "N806", # Naming: Variable '{name}' in function should be lowercase
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
