[build-system]
requires = ["setuptools>=78.1.0", "setuptools-scm>=8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testflinger-cli"
description = "Testflinger CLI"
readme = "README.md"
license-files = ["COPYING"]
dependencies = [
  "argcomplete>=3.6.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "xdg-base-dirs>=6.0.2",
]
dynamic = ["version"]
requires-python = ">= 3.10"

[project.scripts]
testflinger-cli = "testflinger_cli:cli"
testflinger = "testflinger_cli:cli"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "requests-mock>=1.12.1",
  "ruff>=0.11.6",
]

[tool.pylint.basic]
good-names = ["k", "v"]

[tool.pylint."messages control"]
disable = ["C0209", "too-many-lines"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # comprenhension
    "D", # docstrings
    "DTZ", # flake8-datetimez 
    "E", # pycodestyle errors
    "F", # pyflakes
    "G", # flake8-logging-format TODO
    "I", # isort
    "LOG", # flake8-logging
    "N", # naming
    "PLE", # pylint errors
    "PLW0", # pyling warnings
    "S", # flake8-bandit 
    "W", # pycodestyle warnings
]
ignore = [
    "C901", # mccabe: Function is too complex 
    "D100", # docstring: Missing docstring in public module
    "D101", # docstring: Missing docstring in public class
    "D102", # docstring: Missing docstring in public method
    "D103", # docstring: Missing docstring in public function
    "D104", # docstring: Missing docstring in public package
    "D105", # docstring: Missing docstring in magic method
    "D107", # docstring: Missing docstring in __init__
    "D203", # docstring: 1 black line required before class docstring
    "D204", # docstring: 1 black line required after class docstring
    "D205", # docstring: 1 black line required between summary line and description
    "D212", # docstring: Multi-line docstring summary should start at the first line
    "D213", # docstring: Multi-line docstring summary should start at the second line
    "D215", # docstring: Section underline is over-indented
    "D400", # docstring: First line should end with a period
    "D406", # docstring: Section name should end with a newline
    "D407", # docstring: Missing dashed underline after section
    "D408", # docstring: Section underline should be in the line following the section's name
    "D409", # docstring: Section underline should match the lenght of its name
    "D413", # docstring: Missing blank line after last section. 
    "D415", # docstring: First line should end with a period, question mark, or exclamation point
    "N803", # Naming: Argument '{name}' should be lowercase
    "N806", # Naming: Variable '{name}' in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"testflinger_cli/tests/*" = [
  "S101", # use of assert
  "S105", # use of harcoded passwords for mock
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
