[build-system]
requires = ["uv-build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "testflinger-common"
description = "Testflinger common modules"
readme = "README.md"
version = "1.1.0"
requires-python = ">=3.8"
dependencies = ["strenum>=0.4.15"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.6"]

[tool.ruff]
line-length = 79
