[build-system]
requires = ["uv-build>=0.7,<0.8"]
build-backend = "uv_build"

[project]
name = "testflinger-common"
description = "Testflinger common modules"
readme = "README.md"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "strenum>=0.4.15",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests-mock>=1.12.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 79
