[build-system]
requires = ["wheel", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "testflinger-device-connectors"
version = "0.0.2"
description = "Testflinger device connectors"
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rpyc<6",
    "validators>=0.34.0",
]

[project.scripts]
snappy-device-agent = "testflinger_device_connectors.cmd:main"
testflinger-device-connector = "testflinger_device_connectors.cmd:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.7",
]

[tool.setuptools.package-data]
testflinger_device_connectors = ["data/**"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # comprenhension
    "D",   # docstrings
    "DTZ", # flake8-datetimez 
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "LOG", # flake8-logging
    "N",   # naming
    "PLE", # pylint errors
    "PLW0", # pyling warnings
    #"S",  # flake8-bandit 
    "W",   # pycodestyle warnings
]
ignore = [
    "B009",    # flake8-bugbear; get attr with constant
    "B904",    # flake8-bugbear: raise without from inside except
    "D100",    # docstring: Missing docstring in public module
    "D101",    # docstring: Missing docstring in public class
    "D102",    # docstring: Missing docstring in public method
    "D103",    # docstring: Missing docstring in public function
    "D104",    # docstring: Missing docstring in public package
    "D107",    # docstring: Missing docstring in __init__
    "D205",    # docstring: 1 black line required between summary line and description
    "G001",    # flake8-logging-format: logging string format
    "G003",    # flake8-logging-format: logging string concat
    "G004",    # flake8-logging-format: loggin f-string
    "PLW0603", # pylint warnings: global statement
]

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "SerialLogger" # Function needs to follow snake_case, excluded to prevail style
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
