[build-system]
requires = ["uv-build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "testflinger"
description = "Testflinger Server"
readme = "README.md"
version = "1.1.0"
authors = []
requires-python = ">=3.10"
dependencies = [
    "apiflask>=2.1.1",
    "bcrypt>=4.2.0",
    "flask>=3.0.3",
    "flask-pymongo>=3.0.0",
    "gunicorn>=23.0.0",
    "gevent>=24.2.1",
    "prometheus-client>=0.21.0",
    "prometheus-flask-exporter>=0.23.1",
    "pyjwt>=2.8.0",
    "pymongo<4.9.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sentry-sdk>= 2.0.1",
    "urllib3>=2.2.1",
    "marshmallow-oneofschema>=3.1.1",
]

[project.scripts]
client_credentials_admin = "testflinger.tools.client_credentials_admin:main"

[dependency-groups]
charm = ["ops>=2.2.0"]
dev = [
    "cosl>=0.0.57",
    "djlint>=1.36.4",
    "mongomock>=4.3.0",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 79
extend-exclude = ["charm/lib"]

[tool.ruff.lint]
select = [
    "C", # comprenhension
    "D", # docstrings
    "E", # pycodestyle errors
    "F", # pyflakes
    "N", # naming
    "W", # pycodestyle warnings
    "I001" # Import order: Imported names are in the wrong order.
]
ignore = [
    "C401", # comprenhension: Unnecessary generator - rewrite as a set comprehension.
    "D102", # docstring: Missing doctring in public method
    "D104", # docstring: Missing docstring in public package
    "D107", # doctring: Missing docstring in __init__
    "D203", # docstring: 1 black line required before class doctring
    "D204", # docstring: 1 black line required after class doctring
    "D205", # docstring: 1 black line required between summary line and description
    "D212", # docstring: Multi-line doctring summary should start at the first line
    "D213", # docstring: Multi-line docstring summary should start at the second line
    "D215", # docstring: Section underline is over-indented
    "D400", # docstring: First line should end with a period
    "D406", # docstring: Section name should end with a newline
    "D407", # docstring: Missing dashed underline after section
    "D408", # docstring: Section underline should be in the line following the section's name
    "D409", # docstring: Section underline should match the lenght of its name
    "D413", # docstring: Missing blank line after last section. 
    "D415", # docstring: First line should end with a period, question mark, or exclamation point
]


[tool.djlint]
profile = "jinja"
ignore = "H023,H021"
indent = 2

[tool.pylint."messages control"]
disable = ["C0209"]
