[build-system]
requires = ["uv-build>=0.7,<0.8"]
build-backend = "uv_build"

[project]
name = "testflinger"
description = "Testflinger Server"
readme = "README.md"
version = "1.4.1"
authors = []
requires-python = ">=3.10"
dependencies = [
    "apiflask>=2.1.1",
    "bcrypt>=4.2.0",
    "flask>=3.0.3",
    "flask-pymongo>=3.0.0",
    "gunicorn>=23.0.0",
    "gevent>=24.2.1",
    "hvac>=2.3.0",
    "prometheus-client>=0.21.0",
    "prometheus-flask-exporter>=0.23.1",
    "pyjwt>=2.8.0",
    "pymongo[encryption]<4.9.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sentry-sdk>= 2.0.1",
    "testflinger-common",
    "urllib3>=2.2.1",
    "marshmallow-oneofschema>=3.1.1",
    "strenum>=0.4.15",
    "authlib>=1.6.3",
]

[project.scripts]
client_credentials_admin = "testflinger.tools.client_credentials_admin:main"

[dependency-groups]
charm = ["ops>=2.2.0"]
dev = [
    "cosl>=0.0.57",
    "djlint>=1.36.4",
    "mongomock>=4.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-iam>=0.2.4",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 79
extend-exclude = ["charm/lib"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # comprenhension
    "D",   # docstrings
    "DTZ", # flake8-datetimez 
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "G",   # flake8-logging-format 
    "I",   # isort
    "LOG", # flake8-logging
    "N",   # naming
    "PLE", # pylint errors
    "PLW", # pyling warnings
    "S",   # flake8-bandit 
    "W",   # pycodestyle warnings
]
ignore = [
    "D104", # docstring: Missing docstring in public package
    "D205", # docstring: missing-blank-line-after-summary
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]
"charm/tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.djlint]
profile = "jinja"
ignore = "H023,H021"
indent = 2

[tool.uv.sources]
testflinger-common = { path = "../common", editable = true }
