[project]
name = "testflinger-agent-host-charm"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "ops >= 3.5.0",
    "urllib3>=2.6.3",
    "cosl>=0.0.53",
    "gitpython==3.1.50",
    "jinja2==3.1.6",
    "charmlibs-passwd==1.0.1",
    "charmlibs-apt==1.0.0.post0",
    "requests>=2.33.1",
    "pydantic>=2.12,<3",
]

[dependency-groups]
lint = ["ruff"]
unit = ["coverage[toml]", "ops[testing]", "pytest"]
integration = ["jubilant>=1.6.2", "pytest", "pytest-jubilant", "requests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "8.3.5"
log_cli_level = "INFO"

[tool.ruff]
line-length = 79
extend-exclude = ["lib"]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # comprehension
    "D",   # docstrings
    "DTZ", # flake8-datetimez 
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "LOG", # flake8-logging
    "N",   # naming
    "PLE", # pylint errors
    "PLW", # pyling warnings
    "S",   # flake8-bandit 
    "W",   # pycodestyle warnings
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
